# teplugin

./: .gitignore  .yo-rc.json  LICENSE  README.md  package-lock.json  package.json
__tests__/: app.js
generators/: util.js
generators/app/: index.js
generators/app/templates/: CMakeLists.txt  Config.h  Dialog.cpp  Dialog.h  Plugin.cpp  Plugin.h  PluginDialog.cpp  PluginDialog.h  PluginDialog.ui  plugin.teplg.json
